--- a/index.html
+++ b/index.html
@@ -4,11 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Document</title>
+    <title>The Word Guessing Game</title>
 </head>
-<body>
+<header>
+    <h1>The Word Guessing Game</h1>
+    <p>Type a letter to guess a letter. Guess the word before time runs out!</p>
+    <p>Your score is a combination of the difficulty of the word, the number of wrong guesses, and the time left.</p>
+    <p>Be fast, but be accurate!</p>
+</header>
+
+<body class="container-fluid"> 
+    <div class="container mb-5">
+        <div class="row d-flex justify-content-center mb-2">
+            <section class="letters active col-1 col-md" data-letter="a">a</section>
+            <section class="letters active col-1 col-md" data-letter="b">b</section>
+            <section class="letters active col-1 col-md" data-letter="c">c</section>
+            <section class="letters active col-1 col-md" data-letter="d">d</section>
+            <section class="letters active col-1 col-md" data-letter="e">e</section>
+            <section class="letters active col-1 col-md" data-letter="f">f</section>
+            <section class="letters active col-1 col-md" data-letter="g">g</section>
+            <section class="letters active col-1 col-md" data-letter="h">h</section>
+            <section class="letters active col-1 col-md" data-letter="i">i</section>
+            <section class="letters active col-1 col-md" data-letter="j">j</section>
+            <section class="letters active col-1 col-md" data-letter="k">k</section>
+            <section class="letters active col-1 col-md" data-letter="l">l</section>
+        </div>   
+        <div class="row d-flex justify-content-center mb-2">
+            <section class="letters active col-2" ></section>
+            <section class="letters active col-1 col-md" data-letter="m">m</section>
+            <section class="letters active col-1 col-md" data-letter="n">n</section>
+            <section class="letters active col-1 col-md" data-letter="o">o</section>
+            <section class="letters active col-1 col-md" data-letter="p">p</section>
+            <section class="letters active col-1 col-md" data-letter="q">q</section>
+            <section class="letters active col-1 col-md" data-letter="r">r</section>
+            <section class="letters active col-1 col-md" data-letter="s">s</section>
+            <section class="letters active col-1 col-md" data-letter="t">t</section>
+            <section class="letters active col-2" ></section>
+        </div>  
+        <div class="row d-flex justify-content-center mb-2">
+            <section class="letters active col-3" ></section>
+            <section class="letters active col-1 col-md" data-letter="u">u</section>
+            <section class="letters active col-1 col-md" data-letter="v">v</section>
+            <section class="letters active col-1 col-md" data-letter="w">w</section>
+            <section class="letters active col-1 col-md" data-letter="x">x</section>
+            <section class="letters active col-1 col-md" data-letter="y">y</section>
+            <section class="letters active col-1 col-md" data-letter="z">z</section>
+            <section class="letters active col-3" ></section>
+        </div> 
+    </div>
+    <section class="container d-flex justify-content-center">
+        <div class="row">
+            <ul id="secretWord" class="d-flex flex-row justify-content-center">
+
+            </ul>
+
+        </div>
+    </section>
+    <section class="scores">
+        <div class = "row">
+            
+
+        </div>
+    </section>
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
