added end game and scoring. need local storage and on screen score displays

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>The Word Guessing Game</h1>
     <p>Type a letter to guess a letter. Guess the word before time runs out!</p>
     <p>Your score is a combination of the difficulty of the word, the number of wrong guesses, and the time left.</p>
-    <p>Be fast, but be accurate!</p>
+    <p>Be fast, but be accurate! (Button mashing NOT allowed... we're watching you...)</p>
 </header>
 
 <body class="container-fluid"> 
