added local storage of scores and printing of final score to page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     </section>
     <section class="scores">
         <div class = "row">
+            <section class="currentScore col-8">
+
+            </section>
             
 
         </div>
