--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>The Word Guessing Game</title>
@@ -16,7 +18,7 @@
     <p>Be fast, but be accurate! (Button mashing NOT allowed... we're watching you...)</p>
 </header>
 
-<body class="container-fluid"> 
+<body class="container-fluid">
     <div class="container mb-5">
         <div class="row d-flex justify-content-center mb-2">
             <section class="letters active col-1 col-md" data-letter="a">a</section>
@@ -31,9 +33,9 @@
             <section class="letters active col-1 col-md" data-letter="j">j</section>
             <section class="letters active col-1 col-md" data-letter="k">k</section>
             <section class="letters active col-1 col-md" data-letter="l">l</section>
-        </div>   
+        </div>
         <div class="row d-flex justify-content-center mb-2">
-            <section class="letters active col-2" ></section>
+            <section class="letters  col-2"></section>
             <section class="letters active col-1 col-md" data-letter="m">m</section>
             <section class="letters active col-1 col-md" data-letter="n">n</section>
             <section class="letters active col-1 col-md" data-letter="o">o</section>
@@ -42,18 +44,18 @@
             <section class="letters active col-1 col-md" data-letter="r">r</section>
             <section class="letters active col-1 col-md" data-letter="s">s</section>
             <section class="letters active col-1 col-md" data-letter="t">t</section>
-            <section class="letters active col-2" ></section>
-        </div>  
+            <section class="letters  col-2"></section>
+        </div>
         <div class="row d-flex justify-content-center mb-2">
-            <section class="letters active col-3" ></section>
+            <section class="letters  col-3"></section>
             <section class="letters active col-1 col-md" data-letter="u">u</section>
             <section class="letters active col-1 col-md" data-letter="v">v</section>
             <section class="letters active col-1 col-md" data-letter="w">w</section>
             <section class="letters active col-1 col-md" data-letter="x">x</section>
             <section class="letters active col-1 col-md" data-letter="y">y</section>
             <section class="letters active col-1 col-md" data-letter="z">z</section>
-            <section class="letters active col-3" ></section>
-        </div> 
+            <section class="letters  col-3"></section>
+        </div>
     </div>
     <section class="container d-flex justify-content-center">
         <div class="row">
@@ -64,12 +66,25 @@
         </div>
     </section>
     <section class="scores">
-        <div class = "row">
+        <div class="row">
             <section class="currentScore col-8">
 
             </section>
-            
 
+        </div>
+        <div class="row highScores">
+            <table>
+                <thead>
+                    <tr>
+                        <th colspan="2">
+                            <h3>High Scores</h3>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
         </div>
     </section>
 
@@ -79,7 +94,10 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <script src="./assets/scripts/script.js"></script>
 </body>
+
 </html>
