--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Hind+Madurai:wght@300;400;500;600;700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>The Word Guessing Game</title>
 </head>
-<header>
-    <h1>The Word Guessing Game</h1>
+<body>
+<header class="text-center headerbg container-fluid p3">
+    <h1 class="pt-3 pb-3">The Word Guessing Game</h1>
     <p>Type a letter to guess a letter. Guess the word before time runs out!</p>
     <p>Your score is a combination of the difficulty of the word, the number of wrong guesses, and the time left.</p>
-    <p>Be fast, but be accurate! (Button mashing NOT allowed... we're watching you...)</p>
+    <p class="pb-4">Be fast, but be accurate! <span class="fst-italic">(Button mashing NOT allowed... we're watching you...)</span></p>
 </header>
 
-<body class="container-fluid">
-    <div class="container mb-5">
+<main class="container-fluid">
+    <div class="container mb-5 pt-3">
         <div class="row d-flex justify-content-center mb-2">
             <section class="letters active col-1 col-md" data-letter="a">a</section>
             <section class="letters active col-1 col-md" data-letter="b">b</section>
@@ -57,7 +62,7 @@
             <section class="letters  col-3"></section>
         </div>
     </div>
-    <section class="container d-flex justify-content-center">
+    <section class="container d-flex justify-content-center mb-5">
         <div class="row">
             <ul id="secretWord" class="d-flex flex-row justify-content-center">
 
@@ -66,14 +71,14 @@
         </div>
     </section>
     <section class="scores">
-        <div class="row">
-            <section class="currentScore col-8">
+        <div class="row justify-content-center">
+            <section class="currentScore text-center col-8 lh-3">
 
             </section>
 
         </div>
-        <div class="row highScores">
-            <table>
+        <div class="container highScores justify-content-center col-5">
+            <table class="table table-striped slide">
                 <thead>
                     <tr>
                         <th colspan="2">
@@ -98,6 +103,6 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="./assets/scripts/script.js"></script>
-</body>
-
+</main>
+</body>>
 </html>
