added responsive classes and media queries to adjust puzzle for smaller sizes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         </div>
         <div class="row highScores justify-content-center col-12 ">
-            <div class="col-4">
+            <div class="col-sm-12 col-md-5 col-l-4">
             <table class="table table-striped slide">
                 <thead>
                     <tr>
@@ -94,7 +94,7 @@
                 </tbody>
             </table>
             </div>
-            <div class="timer col-4 text-end">
+            <div class="timer col-sm-12 col-md-5 col-l-4 text-end">
                 <h3>Timer</h3>
                 <p class="timeLeft"></p>
             </div>
