--- a/index.html
+++ b/index.html
@@ -15,102 +15,102 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>The Word Guessing Game</title>
 </head>
+
 <body>
-<header class="text-center headerbg container-fluid p3">
-    <h1 class="pt-3 pb-3">The Word Guessing Game</h1>
-    <p>Type a letter to guess a letter. Guess the word before time runs out!</p>
-    <p>Your score is a combination of the difficulty of the word, the number of wrong guesses, and the time left.</p>
-    <p class="pb-4">Be fast, but be accurate! <span class="fst-italic">(Button mashing NOT allowed... we're watching you...)</span></p>
-</header>
+    <header class="text-center headerbg container-fluid p3">
+        <h1 class="pt-3 pb-3">The Word Guessing Game</h1>
+        <p>Type a letter to guess a letter. Guess the word before time runs out!</p>
+        <p>Your score is a combination of the difficulty of the word, the number of wrong guesses, and the time left.
+        </p>
+        <p class="pb-4">Be fast, but be accurate! <span class="fst-italic">(Button mashing NOT allowed... we're watching
+                you...)</span></p>
+    </header>
 
-<main class="container-fluid">
-    <section class = "letters">
-    <div class="container mb-5 pt-3">
-        <div class="row d-flex justify-content-center mb-2">
-            <section class="letters active col-1 col-md" data-letter="a">a</section>
-            <section class="letters active col-1 col-md" data-letter="b">b</section>
-            <section class="letters active col-1 col-md" data-letter="c">c</section>
-            <section class="letters active col-1 col-md" data-letter="d">d</section>
-            <section class="letters active col-1 col-md" data-letter="e">e</section>
-            <section class="letters active col-1 col-md" data-letter="f">f</section>
-            <section class="letters active col-1 col-md" data-letter="g">g</section>
-            <section class="letters active col-1 col-md" data-letter="h">h</section>
-            <section class="letters active col-1 col-md" data-letter="i">i</section>
-            <section class="letters active col-1 col-md" data-letter="j">j</section>
-            <section class="letters active col-1 col-md" data-letter="k">k</section>
-            <section class="letters active col-1 col-md" data-letter="l">l</section>
-        </div>
-        <div class="row d-flex justify-content-center mb-2">
-            <section class="letters  col-2"></section>
-            <section class="letters active col-1 col-md" data-letter="m">m</section>
-            <section class="letters active col-1 col-md" data-letter="n">n</section>
-            <section class="letters active col-1 col-md" data-letter="o">o</section>
-            <section class="letters active col-1 col-md" data-letter="p">p</section>
-            <section class="letters active col-1 col-md" data-letter="q">q</section>
-            <section class="letters active col-1 col-md" data-letter="r">r</section>
-            <section class="letters active col-1 col-md" data-letter="s">s</section>
-            <section class="letters active col-1 col-md" data-letter="t">t</section>
-            <section class="letters  col-2"></section>
-        </div>
-        <div class="row d-flex justify-content-center mb-2">
-            <section class="letters  col-3"></section>
-            <section class="letters active col-1 col-md" data-letter="u">u</section>
-            <section class="letters active col-1 col-md" data-letter="v">v</section>
-            <section class="letters active col-1 col-md" data-letter="w">w</section>
-            <section class="letters active col-1 col-md" data-letter="x">x</section>
-            <section class="letters active col-1 col-md" data-letter="y">y</section>
-            <section class="letters active col-1 col-md" data-letter="z">z</section>
-            <section class="letters  col-3"></section>
-        </div>
-    </div>
-    <section class="container d-flex justify-content-center mb-5">
-        <div class="row">
-            <ul id="secretWord" class="d-flex flex-row justify-content-center">
-                <li class="startButton rounded p-3"><h3>Start the Timer!</h3></li>
-            </ul>
+    <main class="container-fluid">
+        <section class="letters">
+            <div class="container mb-5 pt-3">
+                <div class="row d-flex justify-content-center mb-2">
+                    <section class="letters active col-1 col-md" data-letter="a">a</section>
+                    <section class="letters active col-1 col-md" data-letter="b">b</section>
+                    <section class="letters active col-1 col-md" data-letter="c">c</section>
+                    <section class="letters active col-1 col-md" data-letter="d">d</section>
+                    <section class="letters active col-1 col-md" data-letter="e">e</section>
+                    <section class="letters active col-1 col-md" data-letter="f">f</section>
+                    <section class="letters active col-1 col-md" data-letter="g">g</section>
+                    <section class="letters active col-1 col-md" data-letter="h">h</section>
+                    <section class="letters active col-1 col-md" data-letter="i">i</section>
+                    <section class="letters active col-1 col-md" data-letter="j">j</section>
+                    <section class="letters active col-1 col-md" data-letter="k">k</section>
+                    <section class="letters active col-1 col-md" data-letter="l">l</section>
+                </div>
+                <div class="row d-flex justify-content-center mb-2">
+                    <section class="letters  col-2"></section>
+                    <section class="letters active col-1 col-md" data-letter="m">m</section>
+                    <section class="letters active col-1 col-md" data-letter="n">n</section>
+                    <section class="letters active col-1 col-md" data-letter="o">o</section>
+                    <section class="letters active col-1 col-md" data-letter="p">p</section>
+                    <section class="letters active col-1 col-md" data-letter="q">q</section>
+                    <section class="letters active col-1 col-md" data-letter="r">r</section>
+                    <section class="letters active col-1 col-md" data-letter="s">s</section>
+                    <section class="letters active col-1 col-md" data-letter="t">t</section>
+                    <section class="letters  col-2"></section>
+                </div>
+                <div class="row d-flex justify-content-center mb-2">
+                    <section class="letters  col-3"></section>
+                    <section class="letters active col-1 col-md" data-letter="u">u</section>
+                    <section class="letters active col-1 col-md" data-letter="v">v</section>
+                    <section class="letters active col-1 col-md" data-letter="w">w</section>
+                    <section class="letters active col-1 col-md" data-letter="x">x</section>
+                    <section class="letters active col-1 col-md" data-letter="y">y</section>
+                    <section class="letters active col-1 col-md" data-letter="z">z</section>
+                    <section class="letters  col-3"></section>
+                </div>
+            </div>
+            <section class="container d-flex justify-content-center mb-5">
+                <div class="row">
+                    <ul id="secretWord" class="d-flex flex-row justify-content-center">
+                        <li class="startButton rounded p-3">
+                            <h3>Start the Timer!</h3>
+                        </li>
+                    </ul>
 
-        </div>
-    </section>
-</section>
-    <section class="scores container">
-        <div class="row justify-content-center setHeight">
-            <section class="currentScore text-center col-8 lh-3">
-
+                </div>
             </section>
+        </section>
+        <section class="scores container">
+            <div class="row justify-content-center setHeight">
+                <section class="currentScore text-center col-8 lh-3">
 
-        </div>
-        <div class="row highScores justify-content-center col-12 ">
-            <div class="col-sm-12 col-md-5 col-l-4">
-            <table class="table table-striped slide">
-                <thead>
-                    <tr>
-                        <th colspan="2">
-                            <h3>High Scores</h3>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
+                </section>
 
-                </tbody>
-            </table>
             </div>
-            <div class="timer col-sm-12 col-md-5 col-l-4 text-end">
-                <h3>Timer</h3>
-                <p class="timeLeft"></p>
+            <div class="row highScores justify-content-center col-12 ">
+                <div class="col-sm-12 col-md-5 col-l-4">
+                    <table class="table table-striped slide">
+                        <thead>
+                            <tr>
+                                <th colspan="2">
+                                    <h3>High Scores</h3>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="timer col-sm-12 col-md-5 col-l-4 text-end">
+                    <h3>Timer</h3>
+                    <p class="timeLeft"></p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-    <script src="./assets/scripts/script.js"></script>
-</main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
+        <script src="./assets/scripts/script.js"></script>
+    </main>
 </body>>
+
 </html>
