--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 you...)</span></p>
     </header>
 
-    <main class="container-fluid">
+    <main class="container-fluid topLevel">
         <section class="letters">
             <div class="container mb-5 pt-3">
                 <div class="row d-flex justify-content-center mb-2">
@@ -77,6 +77,7 @@
                 </div>
             </section>
         </section>
+
         <section class="scores container">
             <div class="row justify-content-center setHeight">
                 <section class="currentScore text-center col-8 lh-3">
@@ -105,12 +106,20 @@
                 </div>
             </div>
         </section>
-
+        <!-- popup definition -->
+        <div id="definition" class="hide position-absolute container d-flex justify-content-center align-items-center col-12 start-50 translate-middle">
+            <section class="col-10 m-3 p-3 text-center align-items-center d-flex justify-content-center">
+                
+                    <p>This is a test of how it will look</p>
+                
+            </section>
+        </div>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
         <script src="./assets/scripts/script.js"></script>
     </main>
-</body>>
+</body>
 
 </html>
