added custom css to style definition pane and animate reveal. added fetch to get definition of current puzzle word

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             </div>
         </section>
         <!-- popup definition -->
-        <div id="definition" class="hide position-absolute container d-flex justify-content-center align-items-center col-12 start-50 translate-middle">
-            <section class="col-10 m-3 p-3 text-center align-items-center d-flex justify-content-center">
+        <div id="definition" class="hide position-absolute container d-flex justify-content-center align-items-center col-12 start-50 translate-middle rounded">
+            <section class="defContain col-12 m-3 p-3 text-left align-items-center d-flex justify-content-center">
                 
                     <p>This is a test of how it will look</p>
                 
